--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,11 @@ on:
     branches: [main, develop]
   pull_request:
     branches: [main, develop]
+    types: [opened, edited, reopened, synchronize]
 
 jobs:
-  lint-and-type-check:
-    name: Lint and TypeScript Type Check
+  lint-type-dependency-check:
+    name: Lint, TypeScript Type, & Dependency Check
     runs-on: ubuntu-latest
 
     steps:
@@ -24,6 +25,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Dependency security audit
+        run: npm audit --production --audit-level critical 
 
       - name: Check formatting/lint
         run: npx biome ci
@@ -86,3 +90,14 @@ jobs:
 
       - name: Run tests
         run: API_KEY=$API_KEY npm run test
+
+  enforce-pr-naming-convention:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check for [VW-##] prefix
+        uses: deepakputhraya/action-pr-title@v1.0.2
+        with:
+          regex: '^\[VW-[0-9]+\]\s.+'
+          verbal_description: "PR title must start with [VW-##] (referencing the relevant Jira ticket) followed by a short description. Feel free to use [VW-0] for a quick cleanup that does not have an associated ticket."
+
